2011-10-11  Raphaël Pinson <raphink@cpan.org> v0.802

	* lib/Config/Augeas.xs: Use #ifndef to prevent future breakage
	if Augeas exports its internal constants.

2011-10-11  Raphaël Pinson <raphink@cpan.org> v0.801

	* lib/Config/Augeas.pm: Added method aug_span
	* lib/Config/Augeas.xs: Added interface for aug_span
	Fixed flags by using binary or instead of logical or.

2010-02-18  Dominique Dumont  <domi.dumont@free.fr> v0.701

	* lib/Config/Augeas.pm: Added new error strings from Augeas 0.7.0

	* lib/Config/Augeas.xs: fix core dump in get (initialise RETVAL
	before calling aug_get). Added new error constants from Augeas
	0.7.0

2009-12-21  Dominique Dumont  <domi.dumont@free.fr> v0.601

	* lib/Config/Augeas.pm : Added methods load, error, error_message,
	error_minor_message and error_details

	* lib/Config/Augeas.xs : Added interface for aug_load and
	aug_error* from Augeas 0.6.0

2009-07-10  Dominique Dumont  <dominique.dumont@hp.com> v0.501

	* Build.PL: modified gcc options to issue more warnings (and fixed
	them

	* lib/Config/Augeas.xs: Fixed compiler warnings (Thanks to
	Guillaume Rousse)

2009-05-27  Dominique Dumont  <dominique.dumont@hp.com> v 0.500

	* lib/Config/Augeas.pm (new): added no_load, save => noop,
	no_std_inc options
	(defvar): new method for Augeas 0.5.0
	(defnode): new method for Augeas 0.5.0

2009-02-17  Dominique Dumont  <dominique.dumont@hp.com> v0.400

	* lib/Config/Augeas.xs (match): dies if aug_match returns -1. Perl
	programmer can choose to trap this failure with eval or Error
	module.

	* lib/Config/Augeas.pm (match): cleanup trailing slashes in
	path (required by new behavior of Augeas 0.4.0)

2009-01-02  Domi  <domi@bilbo.maison> v0.305

	* t/Config-AugeasC.t: Removed test involving AUGROOT environment
	variable (Lead to FTBS on Debian amd64). The removed tests are
	already performed passing augeas root through aug_init.

2008-11-21  Dominique Dumont  <dominique.dumont@hp.com> v0.304
